test/1.2/errors/T_EBITO.dml
/*
  © 2021-2023 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;
device test;

/// ERROR EBITO
bitorder be32;

/// ERROR EBITO
parameter a = 0xffff[0, strange];

/// ERROR EBITO
parameter b = 0xffff[0, le32];

/// ERROR EBITO
parameter c = 0xffff[0, be32];
